docs: added swagger doc to new handlers
